lite server is able to run

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<HTML>
+<!DOCTYPE html>
+<html>
+    <head></head>
 
-<HEAD>
-
-<TITLE>Your Title Here</TITLE>
-
-</HEAD>
-</HTML>
+    <body>
+        <h1>This is a Header</h1>
+    </body>
+</html>
