done with badges

--- a/bs4/conFusion/aboutus.html
+++ b/bs4/conFusion/aboutus.html
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" weight="41"></a>
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>Home</a></li>
@@ -66,7 +66,29 @@
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div>
+
+            <div class="col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts at a glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Start</dt>
+                            <dd class="col-6">9/14/1993</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="card card-body bg-light">
+                    <blockquote class="blockquote text-center" >
+                        <p class="mb-0">Treat yourself</p>
+                    </blockquote>
+                    <footer class="blockquote-footer text-center">Harley
+                        <cite title="Source title">PMW 2019
+                        </cite>
+                    </footer>
+                </div>
             </div>
         </div>
 
@@ -88,7 +110,39 @@
                 <div class="d-none d-sm-block"><p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p></div>
             </div>
        </div>
-
+       <div class="row row-content">
+            <div class="col-12 col-sm-9">
+                <h2>Facts &amp; Figures</h2>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>&nbsp;</th>
+                                <th>2017</th>
+                                <th>2018</th>
+                                <th>2019</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th>Employees</th>
+                                <th>15</th>
+                                <th>30</th>
+                                <th>60</th>
+                            </tr>
+                            <tr>
+                                <th>Guests Served</th>
+                                <th>1500</th>
+                                <th>300000</th>
+                                <th>600000000</th>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3">
+            </div>
+       </div>
     </div>
 
     <footer class="footer">
