added button link to section id

--- a/bs4/conFusion/aboutus.html
+++ b/bs4/conFusion/aboutus.html
@@ -73,7 +73,7 @@
                     <div class="card-body">
                         <dl class="row">
                             <dt class="col-6">Start</dt>
-                            <dd class="col-6">9/14/1993</dd>
+                            <dd class="col-6">9/3/1850</dd>
                         </dl>
                     </div>
                 </div>
@@ -82,10 +82,10 @@
             <div class="col-12">
                 <div class="card card-body bg-light">
                     <blockquote class="blockquote text-center" >
-                        <p class="mb-0">Treat yourself</p>
+                        <p class="mb-0">Treat yourself like someone you're responsible for helping</p>
                     </blockquote>
-                    <footer class="blockquote-footer text-center">Harley
-                        <cite title="Source title">PMW 2019
+                    <footer class="blockquote-footer text-center">Jordan Peterson
+                        <cite title="Source title">Rules of life
                         </cite>
                     </footer>
                 </div>
