--- a/bs4/conFusion/index.html
+++ b/bs4/conFusion/index.html
@@ -33,7 +33,6 @@
         </div>
     </nav>
 
-
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header" >
@@ -41,8 +40,11 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <a role="button" href="#feedbackform" class="btn btn-lg btn-warning text-dark">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -97,7 +99,7 @@
         </div>
 
          <div class="row row-content" >
-            <div class="card">
+            <div class="card" id="feedbackform">
                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                 <div class="card-body">
                     <form>
