--- a/bs4/conFusion/index.html
+++ b/bs4/conFusion/index.html
@@ -44,7 +44,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" href="#feedbackform" class="btn btn-lg btn-warning text-dark">Reserve Table</a>
+                    <a role="button" href="#feedbackForm" class="btn btn-group btn-lg btn-warning">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -98,8 +98,8 @@
             </div>
         </div>
 
-         <div class="row row-content" >
-            <div class="card" id="feedbackform">
+         <div class="row row-content justify-content-center" >
+            <div class="card" id="feedbackForm" >
                 <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
                 <div class="card-body">
                     <form>
