--- a/bs4/conFusion/index.html
+++ b/bs4/conFusion/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/old_styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
 
     <title>Ristorante Con Fusion</title>
@@ -227,14 +227,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next" >
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                    <div class="btn-group" id="carouselButton">
-                    <button class="btn btn-danger btn-sm" id="carousel-pause">
+                    <button class="btn btn-danger btn-sm" id="carousel-button">
                         <span class="fa fa-pause"></span>
                     </button>
-                    <button class="btn btn-danger btn-sm" id="carousel-play">
-                        <span class="fa fa-play"></span>
-                    </button>
-                </div>
                 </div>
             </div>
         </div>
@@ -333,14 +328,21 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
- <script>
+    <script>
         $(document).ready(function(){
             $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-pause").click(function(){
-                $("#mycarousel").carousel('pause');
-            });
-            $("#carousel-play").click(function(){
-                $("#mycarousel").carousel('cycle');
+            $("#carousel-button").click(function(){
+                if($('#carousel-button').children('span').hasClass('fa-pause')){
+                    $("#mycarousel").carousel('pause');
+
+                    $('#carousel-button').children('span').removeClass('fa-pause');
+                    $('#carousel-button').children('span').addClass('fa-play');
+                }else{
+                    $("#mycarousel").carousel('cycle');
+
+                    $('#carousel-button').children('span').removeClass('fa-play');
+                    $('#carousel-button').children('span').addClass('fa-pause');
+                }
             });
         });
     </script>
